# FilmRecommendationSystem

./: LICENSE  README.md
backend/: .gitignore  CMakeLists.txt  Dockerfile
backend/data/: decision_tree.json
backend/grpc/: grpc_common.h
backend/grpc/master/: grpc_master.cpp  grpc_master.h
backend/grpc/protofiles/: database_service.proto
backend/grpc/worker/: server.cpp  service.cpp  service.h  worker_controller.cpp  worker_controller.h
backend/include/: cache.h  decisionTree.h  enums.h  generic_linear_structure.h  lineare_structure.h  linked_list.h  min_heap.h  nodes.h  redBlackTree.h  structs.h  stucts.h  utils.h
backend/include/api/: contoler.h
backend/include/data-structures/: decisionTree.h  generic_linear_structure.h  linked_list.h  maxheap.cpp  maxheap.h  storage.h
backend/include/json-comunicate/: MovieDB.h
backend/lib/: decisiontree.cpp  enums.cpp  generic_linear_structure.tpp  linked_list.tpp  movieDB.cpp  storage.cpp  utils.cpp
backend/scripts/: gen_rand_movies.cpp
backend/src/: service.cpp
backend/tests/: test.cpp
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/Components/: Aside.tsx  DecisionFlow.tsx  Main.tsx  Movie.tsx  MovieList.tsx  movieList.css
frontend/src/hooks/: fetchMovies.tsx
frontend/src/types/: movies_types.ts
